# ra_fuzzy

./: .gitignore  CLAUDE.md  README.md  radonaix_recon_dashboard.jsx
backend/: Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  api.py  main.py  models.py  seed.py
backend/app/core/: __init__.py  config.py  data_sources.py  database.py  deps.py  errors.py  integrations_shutdown.py  logging.py  mailer.py  middleware.py  rbac.py  redis.py  security.py  storage.py
backend/app/integrations/: __init__.py  airflow.py  bi_postgres.py  clickhouse.py  oauth.py  ra_postgres.py  superset.py
backend/app/modules/: __init__.py
backend/app/workers/: __init__.py  celery_app.py  db.py  streaming.py
backend/deploy/: data_sources.example.yaml  gen-selfsigned-cert.sh  python_secrets.py
backend/deploy/grafana/: grafana.ini
backend/deploy/monitoring/: postgres_exporter_queries.yaml
backend/deploy/nginx/: radonaix.conf
backend/deploy/prometheus/: prometheus.yml
backend/deploy/systemd/: node_exporter.service  postgres_exporter.service  (+3 more)
backend/docs/: API_REFERENCE.html  API_REFERENCE.md  CONFIGURATION.md  DATABASE.md  DATA_SOURCES.md  DEPLOYMENT.md  DOWNLOAD_CENTER_UI_CONTRACT.md  MONITORING.md  PRODUCTION_READINESS.md  SETUP.md
backend/migrations/: env.py
backend/scripts/: sync_role_permissions.py
backend/tests/: conftest.py  test_app_smoke.py  test_auth_rehash.py  test_identity_crud.py  test_rbac.py  test_security.py  test_verdicts.py
(+87 files in other folders)
